stimParser/StimParser.py
# Generated from Stim.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class StimParser ( Parser ):

    grammarFileName = "Stim.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\n'", "'('", "')'", "','", "'!'", "'rec[-'", 
                     "']'", "'sweep['", "'*'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INDENT", "TAG", "PAULI", "COMMENT", "NAME", "UINT", 
                      "DOUBLE" ]

    RULE_circuit = 0
    RULE_line = 1
    RULE_line_missing_newline = 2
    RULE_instruction = 3
    RULE_parens_arguments = 4
    RULE_arguments = 5
    RULE_targets = 6
    RULE_arg = 7
    RULE_targ = 8
    RULE_qubit_target = 9
    RULE_measurement_record_target = 10
    RULE_sweep_bit_target = 11
    RULE_pauli_target = 12
    RULE_combiner_target = 13
    RULE_block_start = 14
    RULE_block_end = 15

    ruleNames =  [ "circuit", "line", "line_missing_newline", "instruction", 
                   "parens_arguments", "arguments", "targets", "arg", "targ", 
                   "qubit_target", "measurement_record_target", "sweep_bit_target", 
                   "pauli_target", "combiner_target", "block_start", "block_end" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    INDENT=12
    TAG=13
    PAULI=14
    COMMENT=15
    NAME=16
    UINT=17
    DOUBLE=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CircuitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line_missing_newline(self):
            return self.getTypedRuleContext(StimParser.Line_missing_newlineContext,0)


        def EOF(self):
            return self.getToken(StimParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StimParser.LineContext)
            else:
                return self.getTypedRuleContext(StimParser.LineContext,i)


        def getRuleIndex(self):
            return StimParser.RULE_circuit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCircuit" ):
                listener.enterCircuit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCircuit" ):
                listener.exitCircuit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCircuit" ):
                return visitor.visitCircuit(self)
            else:
                return visitor.visitChildren(self)




    def circuit(self):

        localctx = StimParser.CircuitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_circuit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 32
                    self.line() 
                self.state = 37
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 38
            self.line_missing_newline()
            self.state = 39
            self.match(StimParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line_missing_newline(self):
            return self.getTypedRuleContext(StimParser.Line_missing_newlineContext,0)


        def getRuleIndex(self):
            return StimParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = StimParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.line_missing_newline()
            self.state = 42
            self.match(StimParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Line_missing_newlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruction(self):
            return self.getTypedRuleContext(StimParser.InstructionContext,0)


        def block_start(self):
            return self.getTypedRuleContext(StimParser.Block_startContext,0)


        def block_end(self):
            return self.getTypedRuleContext(StimParser.Block_endContext,0)


        def COMMENT(self):
            return self.getToken(StimParser.COMMENT, 0)

        def getRuleIndex(self):
            return StimParser.RULE_line_missing_newline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine_missing_newline" ):
                listener.enterLine_missing_newline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine_missing_newline" ):
                listener.exitLine_missing_newline(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine_missing_newline" ):
                return visitor.visitLine_missing_newline(self)
            else:
                return visitor.visitChildren(self)




    def line_missing_newline(self):

        localctx = StimParser.Line_missing_newlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_line_missing_newline)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 44
                self.instruction()

            elif la_ == 2:
                self.state = 45
                self.block_start()

            elif la_ == 3:
                self.state = 46
                self.block_end()


            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 49
                self.match(StimParser.COMMENT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(StimParser.NAME, 0)

        def targets(self):
            return self.getTypedRuleContext(StimParser.TargetsContext,0)


        def TAG(self):
            return self.getToken(StimParser.TAG, 0)

        def parens_arguments(self):
            return self.getTypedRuleContext(StimParser.Parens_argumentsContext,0)


        def getRuleIndex(self):
            return StimParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = StimParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(StimParser.NAME)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 53
                self.match(StimParser.TAG)


            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 56
                self.parens_arguments()


            self.state = 59
            self.targets()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parens_argumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arguments(self):
            return self.getTypedRuleContext(StimParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return StimParser.RULE_parens_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens_arguments" ):
                listener.enterParens_arguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens_arguments" ):
                listener.exitParens_arguments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens_arguments" ):
                return visitor.visitParens_arguments(self)
            else:
                return visitor.visitChildren(self)




    def parens_arguments(self):

        localctx = StimParser.Parens_argumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parens_arguments)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(StimParser.T__1)
            self.state = 62
            self.arguments()
            self.state = 63
            self.match(StimParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self):
            return self.getTypedRuleContext(StimParser.ArgContext,0)


        def arguments(self):
            return self.getTypedRuleContext(StimParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return StimParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = StimParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.arg()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 66
                self.match(StimParser.T__3)
                self.state = 67
                self.arguments()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TargetsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def targ(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StimParser.TargContext)
            else:
                return self.getTypedRuleContext(StimParser.TargContext,i)


        def getRuleIndex(self):
            return StimParser.RULE_targets

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTargets" ):
                listener.enterTargets(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTargets" ):
                listener.exitTargets(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTargets" ):
                return visitor.visitTargets(self)
            else:
                return visitor.visitChildren(self)




    def targets(self):

        localctx = StimParser.TargetsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_targets)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 148320) != 0):
                self.state = 70
                self.targ()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UINT(self):
            return self.getToken(StimParser.UINT, 0)

        def DOUBLE(self):
            return self.getToken(StimParser.DOUBLE, 0)

        def getRuleIndex(self):
            return StimParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = StimParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            _la = self._input.LA(1)
            if not(_la==17 or _la==18):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TargContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qubit_target(self):
            return self.getTypedRuleContext(StimParser.Qubit_targetContext,0)


        def measurement_record_target(self):
            return self.getTypedRuleContext(StimParser.Measurement_record_targetContext,0)


        def sweep_bit_target(self):
            return self.getTypedRuleContext(StimParser.Sweep_bit_targetContext,0)


        def pauli_target(self):
            return self.getTypedRuleContext(StimParser.Pauli_targetContext,0)


        def combiner_target(self):
            return self.getTypedRuleContext(StimParser.Combiner_targetContext,0)


        def getRuleIndex(self):
            return StimParser.RULE_targ

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTarg" ):
                listener.enterTarg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTarg" ):
                listener.exitTarg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTarg" ):
                return visitor.visitTarg(self)
            else:
                return visitor.visitChildren(self)




    def targ(self):

        localctx = StimParser.TargContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_targ)
        try:
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.qubit_target()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.measurement_record_target()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.sweep_bit_target()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 81
                self.pauli_target()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 82
                self.combiner_target()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Qubit_targetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UINT(self):
            return self.getToken(StimParser.UINT, 0)

        def getRuleIndex(self):
            return StimParser.RULE_qubit_target

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQubit_target" ):
                listener.enterQubit_target(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQubit_target" ):
                listener.exitQubit_target(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQubit_target" ):
                return visitor.visitQubit_target(self)
            else:
                return visitor.visitChildren(self)




    def qubit_target(self):

        localctx = StimParser.Qubit_targetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_qubit_target)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 85
                self.match(StimParser.T__4)


            self.state = 88
            self.match(StimParser.UINT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Measurement_record_targetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UINT(self):
            return self.getToken(StimParser.UINT, 0)

        def getRuleIndex(self):
            return StimParser.RULE_measurement_record_target

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMeasurement_record_target" ):
                listener.enterMeasurement_record_target(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMeasurement_record_target" ):
                listener.exitMeasurement_record_target(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMeasurement_record_target" ):
                return visitor.visitMeasurement_record_target(self)
            else:
                return visitor.visitChildren(self)




    def measurement_record_target(self):

        localctx = StimParser.Measurement_record_targetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_measurement_record_target)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(StimParser.T__5)
            self.state = 91
            self.match(StimParser.UINT)
            self.state = 92
            self.match(StimParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sweep_bit_targetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UINT(self):
            return self.getToken(StimParser.UINT, 0)

        def getRuleIndex(self):
            return StimParser.RULE_sweep_bit_target

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSweep_bit_target" ):
                listener.enterSweep_bit_target(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSweep_bit_target" ):
                listener.exitSweep_bit_target(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSweep_bit_target" ):
                return visitor.visitSweep_bit_target(self)
            else:
                return visitor.visitChildren(self)




    def sweep_bit_target(self):

        localctx = StimParser.Sweep_bit_targetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_sweep_bit_target)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(StimParser.T__7)
            self.state = 95
            self.match(StimParser.UINT)
            self.state = 96
            self.match(StimParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pauli_targetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PAULI(self):
            return self.getToken(StimParser.PAULI, 0)

        def getRuleIndex(self):
            return StimParser.RULE_pauli_target

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPauli_target" ):
                listener.enterPauli_target(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPauli_target" ):
                listener.exitPauli_target(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPauli_target" ):
                return visitor.visitPauli_target(self)
            else:
                return visitor.visitChildren(self)




    def pauli_target(self):

        localctx = StimParser.Pauli_targetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_pauli_target)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 98
                self.match(StimParser.T__4)


            self.state = 101
            self.match(StimParser.PAULI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Combiner_targetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StimParser.RULE_combiner_target

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCombiner_target" ):
                listener.enterCombiner_target(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCombiner_target" ):
                listener.exitCombiner_target(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCombiner_target" ):
                return visitor.visitCombiner_target(self)
            else:
                return visitor.visitChildren(self)




    def combiner_target(self):

        localctx = StimParser.Combiner_targetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_combiner_target)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(StimParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_startContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruction(self):
            return self.getTypedRuleContext(StimParser.InstructionContext,0)


        def getRuleIndex(self):
            return StimParser.RULE_block_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_start" ):
                listener.enterBlock_start(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_start" ):
                listener.exitBlock_start(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_start" ):
                return visitor.visitBlock_start(self)
            else:
                return visitor.visitChildren(self)




    def block_start(self):

        localctx = StimParser.Block_startContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_block_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.instruction()
            self.state = 106
            self.match(StimParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_endContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StimParser.RULE_block_end

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_end" ):
                listener.enterBlock_end(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_end" ):
                listener.exitBlock_end(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_end" ):
                return visitor.visitBlock_end(self)
            else:
                return visitor.visitChildren(self)




    def block_end(self):

        localctx = StimParser.Block_endContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_block_end)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(StimParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





